correção de alinhamento
alinhamento responsivo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,9 @@ a .card:hover > .card-wrapper p {
         height: 190px;
         width: 190px;
     }
+    .nova-data, .objetivo {
+        text-align: center;
+    }
 }
 .creditos {
   font-size: 12px;
