--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,14 @@ body {
     padding: 0;
     color: #ffffff;
     font-family: 'amatic sc', sans-serif;
+    width: 100%;
 }
 
 /* HEADER */
 
 .header-wrapper {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background: linear-gradient(-45deg, #1f1f27, #1f1f27, #103772, #315789);
     background-size: 400% 400%;
     display: flex;
@@ -41,10 +42,11 @@ a img {
 
 .social-media a {
     text-decoration: none;
-    border-radius: 4px;
+    border-radius: 15px;
     font-weight: 600;
     color: #ffffff;
     font-size: 24px;
+    margin: 1rem;
     padding: 1rem 4rem;
     border: 1px solid #ffffff;
     min-width: 4rem;
@@ -55,8 +57,8 @@ a img {
 }
 
 a:hover {
-    color: #2E1C2B;
-    background-color: #ffffff;
+    color: #1a2b3c;
+    background-color: #fff;
 }
 
 @keyframes backgroundTransition {
@@ -221,7 +223,7 @@ a:hover {
     height: 300px;
     width: 400px;
     margin: 3rem 0 0 0;
-    background-image: url('assets/img/room.jpg');
+    background-image: url('../img/room.jpg');
     background-color: #1f1f27;
     background-position: center;
     background-repeat: no-repeat;
@@ -233,6 +235,7 @@ a:hover {
     color: white;
     cursor: pointer;
     transition: 0.3s;
+    border-radius: 15px;
 }
 
 .card-text {
@@ -292,12 +295,13 @@ a .card:hover > .card-wrapper::before {
     height: 250px;
     width: 350px;
     opacity: 1;
+    border-radius: 15px;
 }
 
 a .card:hover > .card-wrapper p {
     opacity: 1;
     visibility: visible;
-    font-size: 14px;
+    font-size: 22px;
 }
 
 /* FOOTER */
