--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
     height: 100vh;
     width: 100%;
     background: linear-gradient(-45deg, #1f1f27, #1f1f27, #103772, #315789);
+    background-repeat: no-repeat;
     background-size: 400% 400%;
     display: flex;
     flex-direction: column;
