--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material'as mat;
+@include mat.core();
+$curriculo-primary: mat.define-palette(mat.$indigo-palette, 500, 100, 100);
+$curriculo-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$curriculo-warn: mat.define-palette(mat.$red-palette);
+$curriculo-theme: mat.define-light-theme((color: (primary: $curriculo-primary,
+      accent: $curriculo-accent,
+      warn: $curriculo-warn,
+    )));
+@include mat.all-component-themes($curriculo-theme);
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+}
